# channel-config

./: .gitignore  CODEOWNERS  Pipfile  README.md  asset_groups.yaml  channel_tool  channel_tool.py  check_contact_type_defs.sh  contact_type_defs.yaml  create_sat_configs.py  create_sband_halftrack_duplicates.py  create_xband_constraints.py  format.sh  generate_optimal_channels.py  gs_templates.yaml  link_profile.yaml  populate_per_pair_elevations.py  pyproject.toml  queries.sql  rename.sh~  rename_script.sh  rename_script.sh~  run-auto-updates.sh  run_tests.sh  sat_license_defs.yaml  sat_templates.yaml  schema.yaml  set_all_annotations.sh  setup.cfg  setup_ksat_experiment.sh  templates.yaml  typedefs.py  ubngs_constraints.yml  util.py  validation.py
channel_tool/: __main__.py  asset_config.py  audit.py  auto_update_utils.py  database.py  duplicate.py  naming.py  pls_tool.py  tk.py  typedefs.py  util.py  validation.py
ci/: check-ci-container.sh  pr-pipeline.yml  sync-pipeline.yml  sync-task.yml  test-all.sh  test-task.yml  update-pipelines.sh
docs/: index.md
features/: basic_edits.feature  create_new_assets.feature  edit_yaml_structures.feature  environment.py  help.feature  pls.feature
fragments/: US_M2_blocked_GSs_231110.yaml  adcs_config_defaults.yaml  adcs_config_target_coords.yaml  bidir_dvbs2x_parameters.yaml  bidir_dvbs2x_parameters_radionet.yaml  bidir_dvbs2x_parameters_radionet_5mhz_pls11.yaml  bidir_dvbs2x_parameters_radionet_5mhz_pls15.yaml  bidir_legacy_parameters.yaml  bidir_legacy_parameters_radionet.yaml  bidir_uhf_dyn_parameters.yaml  (+46 more)
(+598 files in other folders)
