[tool.poetry]
name = "channel-config"
version = "0.1.0"
description = "Tooling for managing communications channel configuration."
authors = ["nick pascucci <nick.pascucci@spire.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
jsonschema = "*"
more-itertools = "*"
mypy = "*"
pylint = "*"
requests = "*"
rope = "*"
"ruamel.yaml" = "*"
tabulate = "*"
termcolor = "*"
isort = "*"
deepdiff = "^7.0.1"

[tool.poetry.dev-dependencies]
behave = "*"
black = "*"
# cython 3.0.0+ may cause pyyaml build to fail, since pyyaml has a bug and does not constrain its own deps.
# This project gets its dependency on pyyaml from pre-commit.
# The bug: https://github.com/yaml/pyyaml/issues/601
# TODO: remove this constraint when pyyaml is better
cython = "<3.0.0"
coverage = "*"
flake8 = "*"
isort = "*"
pre-commit = "*"
pylint = "*"
pytest = "*"
pytest-cov = "*"
rope = "*"
types-requests = "*"
types-tabulate = "*"
types-termcolor = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
